force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/EDU_Festival_Field_Trips_Applications__c.object-meta.xml
<CustomObject>
    <label>EDU Festival Field Trips Applications</label>
    <nameField>
        <label>EDU Festival Field Trips Applications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EDU Festival Field Trips Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>