force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/Comments_Questions_FFT__c.field-meta.xml
<CustomField>
    <fullName>Comments_Questions_FFT__c</fullName>
    <label>Comments/Questions</label>
    <type>TextArea</type>
</CustomField>