force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/Email_FFT__c.field-meta.xml
<CustomField>
    <fullName>Email_FFT__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>