force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/FFT_App_Name_update__c.field-meta.xml
<CustomField>
    <fullName>FFT_App_Name_update__c</fullName>
    <formula>First_Name_FFT__c &amp;&quot; &quot;&amp; Last_Name_FFT__c&amp;&quot; - &quot;&amp; School_Name_FFT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFT App Name update</label>
    <type>Text</type>
</CustomField>