force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/Film_Type_Interest_FFT__c.field-meta.xml
<CustomField>
    <fullName>Film_Type_Interest_FFT__c</fullName>
    <label>Film Type Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Documentary</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>