force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/Grade_s_Attending_FFT__c.field-meta.xml
<CustomField>
    <fullName>Grade_s_Attending_FFT__c</fullName>
    <label>Grade(s) Attending</label>
    <length>100</length>
    <type>Text</type>
</CustomField>