force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/Last_Name_FFT__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_FFT__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>