force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/Preferred_date_FFT__c.field-meta.xml
<CustomField>
    <fullName>Preferred_date_FFT__c</fullName>
    <label>Preferred date of Field Trip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday, March 9</fullName>
            </value>
            <value>
                <fullName>Tuesday March 10</fullName>
            </value>
            <value>
                <fullName>Wednesday, March 11</fullName>
            </value>
            <value>
                <fullName>Thursday, March 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>