force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/Preferred_Time_FFT__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_FFT__c</fullName>
    <label>Preferred Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Noon</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>