force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/fields/School_Name_FFT__c.field-meta.xml
<CustomField>
    <fullName>School_Name_FFT__c</fullName>
    <label>School Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>