force-app/main/default/objects/EDU_Festival_Field_Trips_Applications__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grade_s_Attending_FFT__c</columns>
    <columns>Preferred_date_FFT__c</columns>
    <columns>Preferred_Time_FFT__c</columns>
    <columns>Email_FFT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>